tests/specs/test/type_check_with_doc/main.ts
/**
 * ```ts
 * const b: number = "1";
 * ```
 */
function foo() {}

const a: string = 1;
